[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/player.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0

[node name="Player" type="Node2D" groups=[
"Player",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Area" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Area"]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -8, -5, 16, 10 )

[node name="BoostParticles" type="CPUParticles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( -8, 0 )
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
preprocess = 0.25
local_coords = false
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
scale_amount = 2.0

[node name="OrbitParticles" type="Particles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
emitting = false
amount = 64
lifetime = 0.5
one_shot = true
explosiveness = 0.8
local_coords = false
process_material = SubResource( 2 )

[node name="ExplosionParticles" type="CPUParticles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
emitting = false
amount = 128
lifetime = 0.5
one_shot = true
explosiveness = 0.8
lifetime_randomness = 1.0
local_coords = false
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 120.0
scale_amount = 2.0

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="Area" to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timeout"]
